[package]
name = "wungeons2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glyphon = "0.5.0"
winit = { version = "0.29.10", features = ["rwh_05"] }
wgpu = { version = "0.19", default-features = true }
pollster = "0.3.0"
game-loop = { version = "*", features = ["winit"] } # or tao
rand = "0.8.5"
wurdle = { path = "../wurdle", version = "0.1.0" }
fnv = "1.0.3"


