[package]
name = "wames"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
rand = "0.8.5"

[[bin]]
name = "wurdle"
path = "bin/wurdle.rs"

